--- a/red-demo/pom.xml
+++ b/red-demo/pom.xml
@@ -11,5 +11,13 @@
 
     <artifactId>red-demo</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.wheel.fast</groupId>
+            <artifactId>red-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
